# brewerycontrol_qt

./: .gitignore  CMakeLists.txt  Constants.qml  GraphView.qml  LICENSE.txt  PID7Seg.qml  PIDButton.qml  PIDController.qml  PIDControllersView.qml  eventsource.cpp  eventsource.h  main.cpp  main.qml  qml.qrc
qml/: main.qml
qml/BreweryControl/: Constants.qml  ControllersSwipeView.qml  GraphView.qml  HopTimer.qml  LongPressMenu.qml  PIDButton.qml  PIDController.qml  PIDControllersView.qml  PumpController.qml  RemainingTime.qml  SetTimeMenu.qml  TimersView.qml  qmldir
qml/BreweryControl/Timers/HopTimer/: HopTimer.qml  LongPressMenu.qml  RemainingTime.qml  SetTimeMenu.qml  qmldir
qml/BreweryControl/Views/Graphs/: qmldir
qml/BreweryControl/Views/PID/: PID7Seg.qml  PIDButton.qml  PIDController.qml  PIDControllersView.qml  qmldir
qml/BreweryControl/Views/Pumps/: PumpController.qml  PumpControllersView.qml  qmldir
qml/BreweryControl/Views/Timers/: AddTimerButton.qml  TimersView.qml  qmldir
src/: CMakeLists.txt  eventsource.cpp  eventsource.h  main.cpp  qml.qrc  settings.cpp  settings.h
